--- a/PaperConnect/.gitignore
+++ b/PaperConnect/.gitignore
@@ -1,4 +1,6 @@
 *.class
+*.cache.js
+*.symbolMap
 
 # Package Files #
 *.jar
@@ -7,6 +9,7 @@
 # gwt caches and compiled units #
 war/gwt_bree/
 gwt-unitCache/
+war/paperconnect
 
 # boilerplate generated classes #
 .apt_generated/
